Modified to fix errors